--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -57,7 +57,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # 4. Construir e Enviar Imagem (Adaptado para Matriz)
-      - name: Build e Push da Imagem para: ${{ matrix.service }}
+      # --- ESTA É A LINHA CORRIGIDA ---
+      - name: 'Build e Push da Imagem para: ${{ matrix.service }}'
         uses: docker/build-push-action@v5
         with:
           # Contexto: O caminho para a pasta do microsserviço
