--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: consumidor
           # IMAGEM CORRIGIDA:
-          image: kingdavid08/consumidor:1 
+          image: kingdavid08/consumidor:latest 
           ports:
             # A porta do Uvicorn (do Dockerfile)
             - containerPort: 8000
