Doc: credentials to enter the Mongo Express

--- a/K8s-Config/Infraestrutura/Mongo/mongo-secret.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-secret.yml
@@ -10,3 +10,9 @@ data:
   mongo-user: U0RfTW9uZ29fQWRtaW4=
   # mongopwd: SD_Mongo_Admin123_PWD
   mongo-password: U0RfTW9uZ29fQWRtaW4xMjNfUFdE
+
+
+# Para o mongo-express em http://localhost:30400/ 
+# As credenciais são:
+#   Utilizador: admin
+#   Password: pass
