--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -84,10 +84,13 @@ jobs:
 
       - name: Install kustomize
         run: |
-          sudo curl -sLo /usr/local/bin/kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/v4.5.7/kustomize_4.5.7_linux_amd64
+          curl -sfLo kustomize.tar.gz https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/v4.5.7/kustomize_v4.5.7_linux_amd64.tar.gz
+          tar -xzf kustomize.tar.gz
+          sudo mv kustomize /usr/local/bin/kustomize
           sudo chmod +x /usr/local/bin/kustomize
 
-      - name: Set image tag via kustomize and build
+      - name: Set image tag via kustomize
+        working-directory: K8s-Config/Apps/${{ matrix.deployment_file }}
         run: |
           kustomize edit set image kingdavid08/${{ matrix.tag }}=kingdavid08/${{ matrix.tag }}:${{ github.run_number }}
-          kustomize build K8s-Config/Apps/${{ matrix.deployment_file }} > out-${{ matrix.deployment_file }}.yaml
+          kustomize build . > ../out-${{ matrix.deployment_file }}.yaml
