Fix: images´ tags automaization

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -82,15 +82,6 @@ jobs:
           # Tags da imagem (ex: kingdavid08/ui:1) - lowercase usando tolower
           tags: kingdavid08/${{ matrix.tag }}:${{github.run_number}}
 
-      - name: Install kustomize
+      - name: Update image tag in deployment file
         run: |
-          curl -sfLo kustomize.tar.gz https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/v4.5.7/kustomize_v4.5.7_linux_amd64.tar.gz
-          tar -xzf kustomize.tar.gz
-          sudo mv kustomize /usr/local/bin/kustomize
-          sudo chmod +x /usr/local/bin/kustomize
-
-      - name: Set image tag via kustomize
-        working-directory: K8s-Config/Apps/${{ matrix.deployment_file }}
-        run: |
-          kustomize edit set image kingdavid08/${{ matrix.tag }}=kingdavid08/${{ matrix.tag }}:${{ github.run_number }}
-          kustomize build . > ../out-${{ matrix.deployment_file }}.yaml
+          sed -i "s|image: kingdavid08/${{ matrix.tag }}:.*|image: kingdavid08/${{ matrix.tag }}:${{ github.run_number }}|" K8s-Config/Apps/${{ matrix.deployment_file }}.yml
