--- a/Apps/Producer/Dockerfile
+++ b/Apps/Producer/Dockerfile
@@ -1,12 +1,17 @@
-
 FROM python:3.10-slim
 # Define o diretório de trabalho no contêiner
 WORKDIR /app
-COPY producer.py .
+
+# Copia o ficheiro de dependências
+COPY requirements.txt .
+
 # Instala as dependências
-RUN pip install pika
-# Copia o código da aplicação para o diretório de trabalho
-COPY . /app
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copia o código da aplicação
+COPY producer.py .
+
 EXPOSE 30300
 
+# Comando para correr a aplicação
 CMD ["python", "producer.py"]
