--- a/Apps/UI/package.json
+++ b/Apps/UI/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.11"
   },
   "devDependencies": {
     "jest": "^30.2.0"
