--- a/K8s-Config/Apps/produtor.yml
+++ b/K8s-Config/Apps/produtor.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: produtor-deployment
 spec:
+  revisionHistoryLimit: 1
   replicas: 1
   selector:
     matchLabels:
