Feat: If not created, create the DB

--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -51,7 +51,9 @@ spec:
                 secretKeyRef:
                   name: mongo-secret
                   key: mongo-password
-                  
-            # 3. Kubernetes injeta o nome da fila
+            - name: DB_NAME
+              value: "projeto_sd"
+            - name: COLLECTION_NAME
+              value: "dados_corrida"
             - name: QUEUE_NAME
               value: "real_time_data"
