--- a/K8s-Config/Infraestrutura/Mongo/mongo-express.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-express.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mongo-express
-          image: mongo-express
+          image: mongo-express:latest # Usar versão mais recente
           ports:
             - containerPort: 8081
           env:
