feat: implementação de métricas para o consumidor

--- a/Apps/Consumer/requirements.txt
+++ b/Apps/Consumer/requirements.txt
@@ -1,12 +1,8 @@
 # requirements.txt
-fastapi
-uvicorn[standard]
 pika
 python-json-logger
-pytest
-pytest-asyncio
-pydantic
 motor
 pydantic-settings
 python-dotenv
 websockets
+prometheus_client
